--- a/index1.html
+++ b/index1.html
@@ -29,7 +29,7 @@
     <!-- intro -->
     <div class="intro">
         <div class="container">
-            <!-- <div class="intro__inner">
+            <div class="intro__inner">
                 <div class="intro__item first">
                     <h1 class="intro__title">
                         Yuri Goncharenko
@@ -58,7 +58,7 @@
                     </div>
 
                 </div>
-                </div> -->
+                </div>
 
                 <div class="intro__inner intro__mobil">
                     <div class="intro__item first">
