--- a/index2.html
+++ b/index2.html
@@ -29,7 +29,7 @@
     <!-- intro -->
     <div class="intro">
         <div class="container">
-            <!-- <div class="intro__inner">
+            <div class="intro__inner">
                 <div class="intro__item first">
                     <h1 class="intro__title">
                         Changelog
@@ -57,9 +57,9 @@
                     </div> 
                 </div>
 
-                </div> -->
+                </div>
                 
-                <div class="intro__inner mobil__intro">
+                <div class="intro__inner intro__mobil">
                     <div class="intro__item first">
 
                         <div class="intro__column first__column">
