--- a/index2.html
+++ b/index2.html
@@ -71,7 +71,6 @@
                             #habit #social #health #google <br>
                             #android #ios #macos #dart
                         </div>
-
         
                     </div>
                     <div class="intro__item second">
@@ -179,21 +178,27 @@
 
                     <div class="team__item"> 
                         <img class="team__photo" src="/img/team__img/Rectangle (3)-min.png" alt="">
+                        <div class="teams__info"> 
                             <div class="teams__name">Valeria Geets</div>
                             <div class="teams__prof">Media Manager</div>
                             <div class="teams__contatc"><a href="mailto:press@asmodeoux.me">press@asmodeoux.me</a></div>
+                        </div>
                     </div>
 
                     <div class="team__item"> 
                         <img class="team__photo" src="/img/team__img/Rectangle (4)-min.png" alt="">
+                        <div class="teams__info"> 
                             <div class="teams__name">Vladislav Sushko</div>
                             <div class="teams__prof teams__lower">Architect Engineer</div>
+                         </div>
                     </div>
 
                     <div class="team__item"> 
                         <img class="team__photo" src="/img/team__img/Rectangle (5)-min.png" alt="">
+                        <div class="teams__info">
                             <div class="teams__name">Zack Niedal</div>
                             <div class="teams__prof teams__lower">Backend Developer</div>
+                        </div>
                     </div>
                     <div class="spot__team">
                        <p class="spot__content"> A spot for you</p>
